# rags-pir

./: README.md  config.yaml  main.py  pyproject.toml
agents/: anomaly_detector.py  base_agent.py  explanation_generator.py  pattern_detector.py  risk_assesor.py  transaction_analyzer.py
api/: handlers.py  middleware.py  routes.py
cot/: dependency_tracker.py  explanation_templates.py  reasoning_engine.py  sequence_analyzer.py
graph_analysis/: community_detection.py  graph_builder.py  node_embeddings.py
models/: alert.py  customer.py  risk_score.py  transaction.py
services/: database_service.py  notification_service.py  openai_service.py
